timeline - fixing nasty jump on mouse leave

--- a/src/timeline/activity/styles.css
+++ b/src/timeline/activity/styles.css
@@ -32,6 +32,7 @@ timeline activity {
 	transition: width 0.7s, margin-left 0.7s, background-color 0.7s;
 	overflow: hidden;
 	z-index: 1;
+	max-width: 410px;
 }
 
 timeline .displayOnHover {
